Fix tag wrapper margin too small

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -184,6 +184,7 @@ a:hover {
 }
 
 .tags-wrapper {
+    margin: 1.5rem 0 0 0;
     display: flex;
     flex-direction: row;
     justify-content: center;
